application/k8s/deployment.yaml

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mongo
  labels:
    app: mongo
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mongo
        tier: mongo
    spec:
      containers:
      - image: mongo:latest
        name: mongo
        imagePullPolicy: Always
        volumeMounts:
        - name: data-storage
          mountPath: /data/mongo
        ports:
        - containerPort: 27017
      volumes:
      - name: data-storage
        persistentVolumeClaim:
          claimName: mongodata-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mongo
  labels:
    app: mongo
spec:
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    app: mongo
    tier: mongo
  type: NodePort
