application/k8s/deploymentFull.yaml

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mongo
  labels:
    app: mongo
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mongo
        tier: mongo
    spec:
      containers:
      - image: mongo:latest
        name: mongo
        imagePullPolicy: Always
        volumeMounts:
        - name: data-storage
          mountPath: /data/mongo
        ports:
        - containerPort: 27017
          name: mongo
      volumes:
      - name: data-storage
        persistentVolumeClaim:
          claimName: mongodata-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mongo
  labels:
    app: mongo
spec:
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    app: mongo
    tier: mongo
  type: NodePort


---


apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: locallibrary
  labels:
    app: locallibrary
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: locallibrary
        tier: locallibrary
    spec:
      containers:
      - image: 127.0.0.1:30400/locallibrary:$BUILD_TAG
        name: locallibrary
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
          name: locallibrary

---
apiVersion: v1
kind: Service
metadata:
  name: locallibrary
  labels:
    app: locallibrary
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: locallibrary
    tier: locallibrary
  type: NodePort

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: locallibrary
spec:
  backend:
    serviceName: locallibrary
    servicePort: 3000
  rules:
  - host: locallibrary.192.168.99.102.xip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: locallibrary
          servicePort: 3000
---
